[package]
name = "shaku_derive"
version = "0.3.1" # check shaku version and dev-dependencies below
authors = ["Boris <boris@humanenginuity.com>"]
description = "Code generation for shaku dependency injection / inversion of control framework"
repository = "https://github.com/humanenginuity/shaku_derive"
documentation = "https://docs.rs/crate/shaku"
categories = ["rust-patterns"]
keywords = ["di", "ioc", "injection", "inversion", "control"]
license = "MIT/Apache-2.0"

[lib]
name = "shaku_derive"
proc-macro = true

[dependencies]
anymap = "0.12.1"
# lazy_static = "0.2"
log = "0.3"
quote = "0.3"
syn = "0.11"

[dependencies.shaku_internals]
git = "ssh://git@github.com/humanenginuity/shaku_internals"

[dev-dependencies.shaku]
git = "ssh://git@github.com/humanenginuity/shaku"